ajustando estructura de carpetas, maquetado header home y estilos iniciales del mismo

--- a/blog.html
+++ b/blog.html
@@ -3,18 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Mí Blog</title>
+    <title>Document</title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li>Facebook</li>
-                <li>Tweeter</li>
-                <li>In</li>
-                <li>Instagram</li>
-                <li>youtube</li>
+                <li>Blog</li>
+                <li>Blogs</li>
+                <li>Sobre Mí</li>
+                <li>Home</li>
             </ul>
         </nav>
     </header>
