--- a/index.html
+++ b/index.html
@@ -8,13 +8,45 @@
 </head>
 <body>
     <header>
+        <div class="navSocialMedia">
+            <div class="iconSocialMedia">
+                <picture class="logoSocialMedia">
+                    <a href="">
+                        <img src="assets/img/logosSocialMedia/001-facebook.svg" alt=""> 
+                    </a>
+                </picture>
+                <picture class="logoSocialMedia">
+                    <a href=""> 
+                        <img src="assets/img/logosSocialMedia/002-twitter.svg" alt="twitter">
+                    </a>
+                </picture>
+                <picture class="logoSocialMedia">
+                    <a href=""> 
+                        <img src="assets/img/logosSocialMedia/010-linkedin.svg" alt="Linjkedin">
+                    </a>
+                </picture>
+                <picture class="logoSocialMedia">
+                    <a href=""> 
+                        <img src="assets/img/logosSocialMedia/011-instagram.svg" alt="Instagram">
+                    </a>
+                </picture>
+                <picture class="logoSocialMedia">
+                    <a href=""> 
+                        <img src="assets/img/logosSocialMedia/008-youtube.svg" alt="Youtube">
+                    </a>
+                </picture>
+            </div>
+        </div>
         <nav>
             <ul>
-                <li>Facebook</li>
-                <li>Tweeter</li>
-                <li>In</li>
-                <li>Instagram</li>
-                <li>youtube</li>
+                <li>
+                    <a href="">
+                        <img src="assets/img/logos/Logo-blanco.png" alt="Mí Blog">
+                    </a>
+                </li>
+                <li>
+                    <a href="perfil.html">Sobre mí </a>
+                </li>
             </ul>
         </nav>
     </header>
