ajustando los estilos del mainy reacomodando el header

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Mí Blog</title>
 </head>
 <body>
@@ -40,7 +40,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="">
+                    <a href="blog.html">
                         <img src="assets/img/logos/Logo-blanco.png" alt="Mí Blog">
                     </a>
                 </li>
@@ -51,10 +51,12 @@
         </nav>
     </header>
     <main>
-
+       <div class="contend">
+        <p>conoce las novedades y noticias del mundo tech</p>
+        <button>
+            Entra ya
+        </button>
+       </div>
     </main>
-    <footer>
-        
-    </footer>
 </body>
 </html>
