--- a/perfil.html
+++ b/perfil.html
@@ -3,16 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/perfil.css">
+    <title>perfil</title>
 </head>
 <body>
     <header>
+        <div class="navSocialMedia">
+            <div class="iconSocialMedia">
+                <picture class="logoSocialMedia">
+                    <a href="">
+                        <img src="assets/img/logosSocialMedia/001-facebook.svg" alt=""> 
+                    </a>
+                </picture>
+                <picture class="logoSocialMedia">
+                    <a href=""> 
+                        <img src="assets/img/logosSocialMedia/002-twitter.svg" alt="twitter">
+                    </a>
+                </picture>
+                <picture class="logoSocialMedia">
+                    <a href=""> 
+                        <img src="assets/img/logosSocialMedia/010-linkedin.svg" alt="Linjkedin">
+                    </a>
+                </picture>
+                <picture class="logoSocialMedia">
+                    <a href=""> 
+                        <img src="assets/img/logosSocialMedia/011-instagram.svg" alt="Instagram">
+                    </a>
+                </picture>
+                <picture class="logoSocialMedia">
+                    <a href=""> 
+                        <img src="assets/img/logosSocialMedia/008-youtube.svg" alt="Youtube">
+                    </a>
+                </picture>
+            </div>
+        </div>
         <nav>
             <ul>
-                <li>Blog</li>
-                <li>Blogs</li>
-                <li>Sobre Mí</li>
-                <li>Home</li>
+                <li>
+                    <!-- <a href="blog.html">
+                        <img src="assets/img/logos/Logo-blanco.png" alt="Mí Blog">
+                    </a> -->
+                </li>
+                <li>
+                    <!-- <a href="perfil.html">Sobre mí </a> -->
+                </li>
             </ul>
         </nav>
     </header>
