ajustando el main y presentando cambio al tipo de fuente

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
     </header>
     <main>
        <div class="contend">
-        <p>conoce las novedades y noticias del mundo tech</p>
-        <button>
-            Entra ya
-        </button>
+            <p>Conoce las novedades y noticias del mundo tech</p>
+            <button>
+                Entra ya
+            </button>
        </div>
     </main>
 </body>
