ajustes finales al index, maquetando la vista de blogs y añadiendo estilos al contenido principal

--- a/blogs.html
+++ b/blogs.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/perfil.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/blogs.css">
     <title>Blogs</title>
 </head>
 <body>
@@ -40,21 +41,134 @@
         <nav>
             <ul>
                 <li>
-                    <!-- <a href="blog.html">
-                        <img src="assets/img/logos/Logo-blanco.png" alt="Mí Blog">
-                    </a> -->
+                    <a href="blog.html">
+                        <img src="assets/img/logos/Logo-negro.png" alt="Mí Blog">
+                    </a>
                 </li>
                 <li>
-                    <!-- <a href="perfil.html">Sobre mí </a> -->
+                    <a href="perfil.html">Sobre mí </a>
                 </li>
             </ul>
         </nav>
     </header>
-    <main>
-
+    <main class="contendBlog">
+        <section class="contendTop">
+            <div class="postionContendTop">
+                <div class="contendTopTitleImage">
+                    <h1>Noticias</h1>
+                    <img src="assets/img/images/lorenzo-herrera-p0j-mE6mGo4-unsplash.jpg" alt="imagen Post">
+                </div>
+                <div class="contendTopDescription">
+                    <h1>Título del Blogpost</h1>
+                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 
+                    1500s, when an unknown printer took a galley of type and scrambled it 
+                    to make a type specimen book. It has survived not only five centuries, 
+                    but also the leap into electronic typesetting, remaining essentially 
+                    unchanged.</p>
+                    <a href="">Leer más</a>
+                </div>        
+            </div>
+        </section>
+        <!-- pósts -->
+        <section class="posts">
+            <h1>Último blogposts</h1>
+            <hr>
+            <div class="articles">
+                <article>
+                    <img src="" alt="post uno">
+                    <h1>titlo post</h1>
+                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 
+                    1500s, when an unknown printer took a galley of type and scrambled it 
+                    to make a type specimen book. It has survived not only five centuries, 
+                    but also the leap into electronic typesetting, remaining essentially 
+                    unchanged.</p>
+                    <a href="">Leer más</a>
+                </article>
+                <article>
+                    <img src="" alt="post dos">
+                    <h1>titlo post</h1>
+                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 
+                    1500s, when an unknown printer took a galley of type and scrambled it 
+                    to make a type specimen book. It has survived not only five centuries, 
+                    but also the leap into electronic typesetting, remaining essentially 
+                    unchanged.</p>
+                    <a href="">Leer más</a>
+                </article>
+                <article>
+                    <img src="" alt="post tres">
+                    <h1>titlo post</h1>
+                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 
+                    1500s, when an unknown printer took a galley of type and scrambled it 
+                    to make a type specimen book. It has survived not only five centuries, 
+                    but also the leap into electronic typesetting, remaining essentially 
+                    unchanged.</p>
+                    <a href="">Leer más</a>
+                </article>
+                <article>
+                    <img src="" alt="post cuatro">
+                    <h1>titlo post</h1>
+                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 
+                    1500s, when an unknown printer took a galley of type and scrambled it 
+                    to make a type specimen book. It has survived not only five centuries, 
+                    but also the leap into electronic typesetting, remaining essentially 
+                    unchanged.</p>
+                    <a href="">Leer más</a>
+                </article>
+                <article>
+                    <img src="" alt="post cinco">
+                    <h1>titlo post</h1>
+                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 
+                    1500s, when an unknown printer took a galley of type and scrambled it 
+                    to make a type specimen book. It has survived not only five centuries, 
+                    but also the leap into electronic typesetting, remaining essentially 
+                    unchanged.</p>
+                    <a href="">Leer más</a>
+                </article>
+                <article>
+                    <img src="" alt="post seis">
+                    <h1>titlo post</h1>
+                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 
+                    1500s, when an unknown printer took a galley of type and scrambled it 
+                    to make a type specimen book. It has survived not only five centuries, 
+                    but also the leap into electronic typesetting, remaining essentially 
+                    unchanged.</p>
+                    <a href="">Leer más</a>
+                </article>
+                <article>
+                    <img src="" alt="post siete">
+                    <h1>titlo post</h1>
+                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 
+                    1500s, when an unknown printer took a galley of type and scrambled it 
+                    to make a type specimen book. It has survived not only five centuries, 
+                    but also the leap into electronic typesetting, remaining essentially 
+                    unchanged.</p>
+                    <a href="">Leer más</a>
+                </article>
+                <article>
+                    <img src="" alt="post ocho">
+                    <h1>titlo post</h1>
+                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 
+                    1500s, when an unknown printer took a galley of type and scrambled it 
+                    to make a type specimen book. It has survived not only five centuries, 
+                    but also the leap into electronic typesetting, remaining essentially 
+                    unchanged.</p>
+                    <a href="">Leer más</a>
+                </article>
+                <article>
+                    <img src="" alt="post nueve">
+                    <h1>titlo post</h1>
+                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 
+                    1500s, when an unknown printer took a galley of type and scrambled it 
+                    to make a type specimen book. It has survived not only five centuries, 
+                    but also the leap into electronic typesetting, remaining essentially 
+                    unchanged.</p>
+                    <a href="">Leer más</a>
+                </article>
+            </div>
+        </section>
     </main>
     <footer>
-        
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
     </footer>
 </body>
 </html>
