--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <!-- Redes sociales para contacto -->
         <div class="navSocialMedia">
             <div class="iconSocialMedia">
                 <picture class="logoSocialMedia">
@@ -37,6 +38,7 @@
                 </picture>
             </div>
         </div>
+        <!-- Barra de navegacion del sitio -->
         <nav>
             <ul>
                 <li>
@@ -50,11 +52,14 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <!-- contenido principal -->
+    <main class="contendIndex">
        <div class="contend">
+            <!-- parrafo principal -->
             <p>Conoce las novedades y noticias del mundo tech</p>
+            <!-- boton de acceso -->
             <button>
-                Entra ya
+                <a href="blogs.html">Entra ya</a>
             </button>
        </div>
     </main>
