maquetacion de los posts y estilos iniciales

--- a/blogs.html
+++ b/blogs.html
@@ -52,6 +52,7 @@
         </nav>
     </header>
     <main class="contendBlog">
+        <!-- topContend -->
         <section class="contendTop">
             <div class="postionContendTop">
                 <div class="contendTopTitleImage">
@@ -60,11 +61,20 @@
                 </div>
                 <div class="contendTopDescription">
                     <h1>Título del Blogpost</h1>
-                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 
-                    1500s, when an unknown printer took a galley of type and scrambled it 
-                    to make a type specimen book. It has survived not only five centuries, 
-                    but also the leap into electronic typesetting, remaining essentially 
-                    unchanged.</p>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
+                        been the industry's standard dummy text ever since the 1500s, when an unknown printer took 
+                        a galley of type and scrambled it to make a type specimen book. 
+                    </p>
+                    <p>
+                        It has survived not only five centuries, but also the leap into electronic typesetting, 
+                        remaining essentially unchanged. 
+                    </p>
+                    <p>
+                        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum 
+                        passages, and more recently with desktop publishing software like Aldus PageMaker including 
+                        versions of Lorem Ipsum.
+                    </p>
                     <a href="">Leer más</a>
                 </div>        
             </div>
@@ -74,101 +84,126 @@
             <h1>Último blogposts</h1>
             <hr>
             <div class="articles">
-                <article>
-                    <img src="" alt="post uno">
-                    <h1>titlo post</h1>
-                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 
-                    1500s, when an unknown printer took a galley of type and scrambled it 
-                    to make a type specimen book. It has survived not only five centuries, 
-                    but also the leap into electronic typesetting, remaining essentially 
-                    unchanged.</p>
-                    <a href="">Leer más</a>
+                <article class="postUno">
+                    <img src="" alt="Imagen post uno">
+                    <h3>titulo</h3>
+                    <!-- <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                        when an unknown printer took a galley of type and scrambled it to make a type 
+                        specimen book. It has survived not only five centuries, but also the leap into 
+                        electronic typesetting, remaining essentially unchanged. It was popularised 
+                        in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                        and more recently with desktop publishing software like Aldus PageMaker including 
+                        versions of Lorem Ipsum. -->
+                    </p>
                 </article>
-                <article>
-                    <img src="" alt="post dos">
-                    <h1>titlo post</h1>
-                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 
-                    1500s, when an unknown printer took a galley of type and scrambled it 
-                    to make a type specimen book. It has survived not only five centuries, 
-                    but also the leap into electronic typesetting, remaining essentially 
-                    unchanged.</p>
-                    <a href="">Leer más</a>
+                <article class="postUno">
+                    <img src="" alt="Imagen post uno">
+                    <h3>titulo</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                        when an unknown printer took a galley of type and scrambled it to make a type 
+                        specimen book. It has survived not only five centuries, but also the leap into 
+                        electronic typesetting, remaining essentially unchanged. It was popularised 
+                        in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                        and more recently with desktop publishing software like Aldus PageMaker including 
+                        versions of Lorem Ipsum.
+                    </p>
                 </article>
-                <article>
-                    <img src="" alt="post tres">
-                    <h1>titlo post</h1>
-                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 
-                    1500s, when an unknown printer took a galley of type and scrambled it 
-                    to make a type specimen book. It has survived not only five centuries, 
-                    but also the leap into electronic typesetting, remaining essentially 
-                    unchanged.</p>
-                    <a href="">Leer más</a>
+                <article class="postUno">
+                    <img src="" alt="Imagen post uno">
+                    <h3>titulo</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                        when an unknown printer took a galley of type and scrambled it to make a type 
+                        specimen book. It has survived not only five centuries, but also the leap into 
+                        electronic typesetting, remaining essentially unchanged. It was popularised 
+                        in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                        and more recently with desktop publishing software like Aldus PageMaker including 
+                        versions of Lorem Ipsum.
+                    </p>
                 </article>
-                <article>
-                    <img src="" alt="post cuatro">
-                    <h1>titlo post</h1>
-                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 
-                    1500s, when an unknown printer took a galley of type and scrambled it 
-                    to make a type specimen book. It has survived not only five centuries, 
-                    but also the leap into electronic typesetting, remaining essentially 
-                    unchanged.</p>
-                    <a href="">Leer más</a>
+                <article class="postUno">
+                    <img src="" alt="Imagen post uno">
+                    <h3>titulo</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                        when an unknown printer took a galley of type and scrambled it to make a type 
+                        specimen book. It has survived not only five centuries, but also the leap into 
+                        electronic typesetting, remaining essentially unchanged. It was popularised 
+                        in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                        and more recently with desktop publishing software like Aldus PageMaker including 
+                        versions of Lorem Ipsum.
+                    </p>
                 </article>
-                <article>
-                    <img src="" alt="post cinco">
-                    <h1>titlo post</h1>
-                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 
-                    1500s, when an unknown printer took a galley of type and scrambled it 
-                    to make a type specimen book. It has survived not only five centuries, 
-                    but also the leap into electronic typesetting, remaining essentially 
-                    unchanged.</p>
-                    <a href="">Leer más</a>
+                <article class="postUno">
+                    <img src="" alt="Imagen post uno">
+                    <h3>titulo</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                        when an unknown printer took a galley of type and scrambled it to make a type 
+                        specimen book. It has survived not only five centuries, but also the leap into 
+                        electronic typesetting, remaining essentially unchanged. It was popularised 
+                        in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                        and more recently with desktop publishing software like Aldus PageMaker including 
+                        versions of Lorem Ipsum.
+                    </p>
                 </article>
-                <article>
-                    <img src="" alt="post seis">
-                    <h1>titlo post</h1>
-                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 
-                    1500s, when an unknown printer took a galley of type and scrambled it 
-                    to make a type specimen book. It has survived not only five centuries, 
-                    but also the leap into electronic typesetting, remaining essentially 
-                    unchanged.</p>
-                    <a href="">Leer más</a>
+                <article class="postUno">
+                    <img src="" alt="Imagen post uno">
+                    <h3>titulo</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                        when an unknown printer took a galley of type and scrambled it to make a type 
+                        specimen book. It has survived not only five centuries, but also the leap into 
+                        electronic typesetting, remaining essentially unchanged. It was popularised 
+                        in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                        and more recently with desktop publishing software like Aldus PageMaker including 
+                        versions of Lorem Ipsum.
+                    </p>
                 </article>
-                <article>
-                    <img src="" alt="post siete">
-                    <h1>titlo post</h1>
-                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 
-                    1500s, when an unknown printer took a galley of type and scrambled it 
-                    to make a type specimen book. It has survived not only five centuries, 
-                    but also the leap into electronic typesetting, remaining essentially 
-                    unchanged.</p>
-                    <a href="">Leer más</a>
+                <article class="postUno">
+                    <img src="" alt="Imagen post uno">
+                    <h3>titulo</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                        when an unknown printer took a galley of type and scrambled it to make a type 
+                        specimen book. It has survived not only five centuries, but also the leap into 
+                        electronic typesetting, remaining essentially unchanged. It was popularised 
+                        in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                        and more recently with desktop publishing software like Aldus PageMaker including 
+                        versions of Lorem Ipsum.
+                    </p>
                 </article>
-                <article>
-                    <img src="" alt="post ocho">
-                    <h1>titlo post</h1>
-                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 
-                    1500s, when an unknown printer took a galley of type and scrambled it 
-                    to make a type specimen book. It has survived not only five centuries, 
-                    but also the leap into electronic typesetting, remaining essentially 
-                    unchanged.</p>
-                    <a href="">Leer más</a>
+                <article class="postUno">
+                    <img src="" alt="Imagen post uno">
+                    <h3>titulo</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                        when an unknown printer took a galley of type and scrambled it to make a type 
+                        specimen book. It has survived not only five centuries, but also the leap into 
+                        electronic typesetting, remaining essentially unchanged. It was popularised 
+                        in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                        and more recently with desktop publishing software like Aldus PageMaker including 
+                        versions of Lorem Ipsum.
+                    </p>
                 </article>
-                <article>
-                    <img src="" alt="post nueve">
-                    <h1>titlo post</h1>
-                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 
-                    1500s, when an unknown printer took a galley of type and scrambled it 
-                    to make a type specimen book. It has survived not only five centuries, 
-                    but also the leap into electronic typesetting, remaining essentially 
-                    unchanged.</p>
-                    <a href="">Leer más</a>
+                <article class="postUno">
+                    <img src="" alt="Imagen post uno">
+                    <h3>titulo</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                        when an unknown printer took a galley of type and scrambled it to make a type 
+                        specimen book. It has survived not only five centuries, but also the leap into 
+                        electronic typesetting, remaining essentially unchanged. It was popularised 
+                        in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                        and more recently with desktop publishing software like Aldus PageMaker including 
+                        versions of Lorem Ipsum.
+                    </p>
                 </article>
             </div>
         </section>
     </main>
-    <footer>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-    </footer>
+
 </body>
 </html>
