agrgando los posts y sus estilos

--- a/blogs.html
+++ b/blogs.html
@@ -85,20 +85,7 @@
             <hr>
             <div class="articles">
                 <article class="postUno">
-                    <img src="" alt="Imagen post uno">
-                    <h3>titulo</h3>
-                    <!-- <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                        when an unknown printer took a galley of type and scrambled it to make a type 
-                        specimen book. It has survived not only five centuries, but also the leap into 
-                        electronic typesetting, remaining essentially unchanged. It was popularised 
-                        in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-                        and more recently with desktop publishing software like Aldus PageMaker including 
-                        versions of Lorem Ipsum. -->
-                    </p>
-                </article>
-                <article class="postUno">
-                    <img src="" alt="Imagen post uno">
+                    <img src="assets/img/images/lorenzo-herrera-p0j-mE6mGo4-unsplash.jpg" alt="Imagen post uno">
                     <h3>titulo</h3>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
@@ -111,7 +98,7 @@
                     </p>
                 </article>
                 <article class="postUno">
-                    <img src="" alt="Imagen post uno">
+                    <img src="assets/img/images/lorenzo-herrera-p0j-mE6mGo4-unsplash.jpg" alt="Imagen post uno">
                     <h3>titulo</h3>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
@@ -124,7 +111,7 @@
                     </p>
                 </article>
                 <article class="postUno">
-                    <img src="" alt="Imagen post uno">
+                    <img src="assets/img/images/lorenzo-herrera-p0j-mE6mGo4-unsplash.jpg" alt="Imagen post uno">
                     <h3>titulo</h3>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
@@ -137,7 +124,7 @@
                     </p>
                 </article>
                 <article class="postUno">
-                    <img src="" alt="Imagen post uno">
+                    <img src="assets/img/images/lorenzo-herrera-p0j-mE6mGo4-unsplash.jpg" alt="Imagen post uno">
                     <h3>titulo</h3>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
@@ -150,7 +137,7 @@
                     </p>
                 </article>
                 <article class="postUno">
-                    <img src="" alt="Imagen post uno">
+                    <img src="assets/img/images/lorenzo-herrera-p0j-mE6mGo4-unsplash.jpg" alt="Imagen post uno">
                     <h3>titulo</h3>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
@@ -163,7 +150,7 @@
                     </p>
                 </article>
                 <article class="postUno">
-                    <img src="" alt="Imagen post uno">
+                    <img src="assets/img/images/lorenzo-herrera-p0j-mE6mGo4-unsplash.jpg" alt="Imagen post uno">
                     <h3>titulo</h3>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
@@ -176,7 +163,7 @@
                     </p>
                 </article>
                 <article class="postUno">
-                    <img src="" alt="Imagen post uno">
+                    <img src="assets/img/images/lorenzo-herrera-p0j-mE6mGo4-unsplash.jpg" alt="Imagen post uno">
                     <h3>titulo</h3>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
@@ -189,7 +176,20 @@
                     </p>
                 </article>
                 <article class="postUno">
-                    <img src="" alt="Imagen post uno">
+                    <img src="assets/img/images/lorenzo-herrera-p0j-mE6mGo4-unsplash.jpg" alt="Imagen post uno">
+                    <h3>titulo</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                        when an unknown printer took a galley of type and scrambled it to make a type 
+                        specimen book. It has survived not only five centuries, but also the leap into 
+                        electronic typesetting, remaining essentially unchanged. It was popularised 
+                        in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+                        and more recently with desktop publishing software like Aldus PageMaker including 
+                        versions of Lorem Ipsum.
+                    </p>
+                </article>
+                <article class="postUno">
+                    <img src="assets/img/images/lorenzo-herrera-p0j-mE6mGo4-unsplash.jpg" alt="Imagen post uno">
                     <h3>titulo</h3>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
